# exonum-employees

./: Cargo.toml  README.md  config.sample.toml
migrations/2018-03-31-094824_create_superuser_keys/: down.sql  up.sql
scripts/: create-employee-1.json  create-employee-2.json  employees.sh  update-employee-1.json  update-employee-2.json
src/: api.rs  config.rs  db_schema.rs  error.rs  lib.rs  schema.rs  service.rs  superuser_key.rs  transactions.rs
src/transactions/: mod.rs
tests/: api.rs  helpers.rs  transactions.rs
