[package]
name = "exonum_employees"
version = "0.1.0"
authors = ["Aleksey Ivanov <ialexxei@gmail.com>"]

[dependencies]
exonum = "0.6"
lazy_static = "1.0"
iron = "0.6"
router = "0.6"
bodyparser = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
failure = "0.1"
quicli = "0.2"

[dev-dependencies]
exonum-testkit = "0.6"
